Added configuration for Travis-CI

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "name": "papaya/module-standard",
+  "license": "GPL-2.0",
+  "homepage": "http://www.papaya-cms.com/",
   "minimum-stability": "dev",
   "extra" : {
     "document-root" : "htdocs/"
@@ -10,13 +12,6 @@
   "require-dev": {
     "papaya/test-framework": "*",
     "papaya/cms-administration": "*",
-    "papaya/template-responsive": "*",
     "papaya/theme-dynamic": "*"
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "http://composer.dev.dim/"
-    }
-  ]
+  }
 }
